# riji

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs  paint.rs  script.rs  stdfiles.rs
src/api/: cmd.rs
tests/: test_capture.rhai  test_capture.rs
