[package]
name = "riji"
description = "Scripting environment using rhai"
version = "0.1.16"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/chuchi-dev/riji"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[profile.release]
lto = true

[features]
default = ["vendored-openssl"]
vendored-openssl = ["git2/vendored-openssl"]

[dependencies]
rhai = { version = "1", features = [
	"no_float",
	"only_i64",
	"no_closure",
	"internals",
	"metadata",
] }
git2 = "0.19"
regex = "1.5.4"
uuid = { version = "1.1", features = ["v4"] }
dunce = "1.0"
toml = "0.8"
rand = "0.8"
lazy_static = "1.5.0"

# painting
ansi_term = "0.12.1"
ctor = "0.2"
output_vt100 = "0.1.2"
